tree-sitter-cook/grammar.js
    source_file: ($) => repeat($._toplevel_item),

    _toplevel_item: ($) =>
      choice(
        $.recipe,
        $.chore,
        $.files_declaration,
        $.tools_declaration,
        $.probe,
        $.config_block,
        $.register_block,
        $.top_level_module_call,
        $.use_declaration,
        $.import_declaration,
        $.comment,
        $._newline,
      ),

    _newline: ($) => /\n/,

    // ── Top-level declarations ─────────────────────────────────

    // App. A.2 (CS-0206). Two forms behind one keyword:
    //   `use NAME`            — the name form, unchanged since CS-0035;
    //   `use ALIAS? PATH`     — the path form, PATH ending in `.lua`.
    // The three productions share the prefix `"use" _lua_ident_name`, so the
    // choice between binding that identifier as `module` or as `alias` is
    // settled by one token of lookahead: a NEWLINE closes the name form, a
    // `use_path` continues the path form.
    recipe: ($) =>
      prec.right(
        seq(
          $._recipe_header,
          $._newline,
          repeat($._recipe_item),
        ),
      ),

    _recipe_header: ($) => $.explicit_recipe_header,

    explicit_recipe_header: ($) =>
      prec(
        1,
        seq(
          "recipe",
          field("name", $._decl_name),
          optional(seq(":", $.dependency_list)),
        ),
      ),

    dependency_list: ($) => repeat1($._name),

    // ── Chores ─────────────────────────────────────────────────

    chore: ($) =>
      prec.right(
        seq(
          $.chore_header,
          $._newline,
          repeat($._chore_item),
        ),
      ),

    chore_header: ($) =>
      seq(
        "chore",
        field("name", $._decl_name),
        field("params", optional($.chore_param_list)),
        optional(seq(":", $.dependency_list)),
      ),

    // COOK-36 / Standard §7.1.1 chore parameters. The grammar accepts
    // any order of param variants; spec ordering rules (required →
    // defaulted → at-most-one variadic), reserved-name ban, dot-ban,
    // and duplicate-name detection are semantic checks enforced by the
    // Rust parser, not tree-sitter.
    _chore_item: ($) =>
      choice(
        $.lua_line,
        $.lua_block,
        $.shell_command,
        $.comment,
        $._newline,
      ),

    // ── Named determinant sets (CS-0222) ───────────────────────

    files_declaration: ($) =>
      seq(
        "files",
        field("name", $._probe_name),
        $._newline,
        repeat(choice($._newline, $.comment)),
        repeat1($.file_set_line),
      ),

    file_set_line: ($) => seq(repeat1($.glob_pattern), $._newline),

    tools_declaration: ($) =>
      seq(
        "tools",
        field("name", $._probe_name),
        $._newline,
        repeat(choice($._newline, $.comment)),
        repeat1($.tool_set_line),
      ),

    tool_set_line: ($) =>
      seq(repeat1(alias($._tool_name, $.identifier)), $._newline),

    // ── Probes (COOK-67/68/69, §22, App. A.3.2; CS-0092 / v0.14) ──
    //
    //   probe_decl   ::= "probe" probe_name (":" probe_dep_list)? NEWLINE
    //                    INDENT probe_body DEDENT
    //   probe_body ::= (ingredients_step | seal_step)? producer NEWLINE
    //   producer   ::= ("json" | "lines")? shell_block
    //                | exec_lua_block
    //
    // The body region (App. A.3.2 "Column-zero constraint" + the
    // implicit-termination rule) is handled the same way as recipes:
    // the scanner stops a preceding recipe/chore/config/register body at
    // a column-0 `probe NAME` line (`is_step_keyword`-sibling check in
    // scan_shell_content, plus `is_toplevel_keyword`), and the probe body
    // itself contains no `shell_command`, so it terminates naturally at
    // the next column-0 top-level item once `producer` closes.
    //
    // CS-0148: a `files` producer MUST NOT combine with a preceding
    // `ingredients_step` (§22.5.2, A-grammar A.3.2). This is encoded
    // syntactically, not just semantically: the `files` form is a
    // separate first alternative of the top-level choice below, so an
    // `ingredients` line followed by `files { … }` cannot reduce through
    // that branch (no `ingredients_step` slot precedes it) and instead
    // falls into the `producer` branch, where `files` is not a valid
    // producer keyword — producing an ERROR node.
    probe: ($) =>
      seq(
        $.probe_header,
        $._newline,
        repeat(choice($._newline, $.comment)),
        seq(
          optional(seq(
            choice($.ingredients_step, $.seal_step),
            repeat(choice($._newline, $.comment)),
          )),
          $.producer,
        ),
      ),

    probe_header: ($) =>
      seq(
        "probe",
        field("name", $._probe_name),
        optional(seq($._probe_dep_colon, $.probe_dep_list)),
      ),

    // probe_name / probe_ref ::= BARE_PROBE_KEY | STRING, where
    // BARE_PROBE_KEY ::= PROBE_SEG (":" PROBE_SEG)* — no cap on segment
    // count (CS-0201, superseding CS-0131): `cc:find:raylib` is one key.
    // PROBE_SEG has no `.` — a dot is member access in a probe reference,
    // so a dotted segment would make `$<demo:cc-version.ver>` ambiguous;
    // the quoted STRING form is the escape hatch for such spellings.
    _probe_name: ($) =>
      choice(alias($._bare_probe_key, $.identifier), $.string),

    _probe_ref: ($) =>
      choice(alias($._bare_probe_key, $.identifier), $.string),

    // Default token precedence, deliberately. This carried `prec(-1)` until
    // it was found to break `repeat1($._disposition_ref)`: a seal step
    // accepted at most ONE bare ref, and only in first position, so
    // `seal a b` and `seal ns:x a` both ERRORed while `seal a ns:x` and
    // `seal ns:a ns:b` parsed — the prefixed alternative carries `prec(1)`
    // and repeated fine. The negative precedence was not needed to keep
    // contextual keywords (`tools`, `files`, `json`, `lines`,
    // `local`, `pinned`, `nondet`, `as`) winning: those are string literals,
    // which tree-sitter already prefers over a regex token of equal
    // precedence and equal match length. The at-most-one-colon shape is
    // enforced by maximal munch in the regex itself (see the comment above),
    // not by precedence.
    _bare_probe_key: ($) =>
      token(/[A-Za-z_][A-Za-z0-9_-]*(:[A-Za-z_][A-Za-z0-9_-]*)*/),

    // Module-prefix-colon disambiguation (App. A.3.2, normative). The
    // dep-list-introducing `:` is distinguished from the module-prefix
    // `:` purely positionally: the dep-list colon is followed by
    // whitespace or end-of-line, the module-prefix colon by an ident
    // char. tree-sitter's token regexes can't express lookahead, so the
    // dep-colon token consumes one trailing whitespace char; maximal
    // munch then prefers it over `_bare_probe_key`'s internal colon only
    // when a space follows (`p: a` → deps), while `cc:zlib` (no space)
    // stays a single name token — as does any longer chain (`a:b:c`,
    // CS-0201).
    _probe_dep_colon: ($) => token(seq(":", /[ \t]/)),

    probe_dep_list: ($) => repeat1($._probe_ref),

    // Producer keywords are contextual because these literals occur only
    // after a probe header. JSON/lines decorate shell output.
    producer: ($) =>
      seq(
        choice(
          seq(optional(choice("json", "lines")), field("body", $.shell_block)),
          field("body", $.exec_lua_block),
        ),
        $._newline,
      ),

    _tool_name: ($) => token(/[A-Za-z_][A-Za-z0-9_.-]*/),

    // A.3.2 `glob_list` — same brace shape as `name_list` (comma/whitespace
    // separated, single physical line), holding quoted glob patterns with
    // an optional `!` exclude prefix instead of bare IDENTs. Mirrors
    // `name_list`'s convention of requiring the first entry syntactically
    // (an empty `{}` MISSES the first `glob_pattern`, matching how an
    // empty `tools {}` is rejected above): the A-grammar prose
    // (§22.5.2) requires a conforming implementation to reject an empty
    // `glob_list`.
    glob_pattern: ($) =>
      choice(
        $.string,
        seq("!", alias(token.immediate(/"([^"\\]|\\.)*"/), $.string)),
      ),

    // ── Recipe body ────────────────────────────────────────────

    _recipe_item: ($) =>
      choice(
        seq(
          $._recipe_indent,
          choice(
            $.ingredients_step,
            $.gather_step,
            $.seal_step,
            $.cook_step,
            $.test_step,
            $.module_call,
          ),
        ),
        $.comment,
        $._newline,
      ),

    // App. A.4 + CS-0078 multi-line patterns:
    //   ingredients_step ::= "ingredients" (ingredient+ | probe_ref) NEWLINE
    //   ingredient       ::= STRING | "!" STRING
    // CONT is an external token (_step_continuation_newline) emitted only
    // when the next line begins with `"` or `!"`; otherwise the declaration
    // terminates and the next line dispatches per App. A.4's priority order.
    // The quote-vs-bare discriminator makes filesystem items mutually
    // exclusive with a probe source. Since CS-0201 a probe key has no
    // segment cap, so `ns:cards:items` lexes as one key; whether a
    // trailing segment selects a field is resolved at register time, not
    // in the grammar.
    ingredients_step: ($) =>
      choice(
        seq(
          "ingredients",
          choice($.string, $.ingredient_exclude),
          repeat(seq(
            optional($._step_continuation_newline),
            choice($.string, $.ingredient_exclude),
          )),
          $._newline,
        ),
        seq(
          "ingredients",
          field("probe", alias($._bare_probe_key, $.identifier)),
          $._newline,
        ),
      ),

    ingredient_exclude: ($) => seq("!", $.string),

    // Appendix A recipe-level determinant set.
    cook_step: ($) =>
      seq(
        "cook",
        choice(
          field("outputs", $.lua_expr_output),
          seq(
            field("outputs", $.string),
            repeat(seq(
              optional($._step_continuation_newline),
              field("outputs", $.string),
            )),
          ),
        ),
        field("body", choice($.shell_block, $.exec_lua_block)),
        optional($.cook_mods),
        $._newline,
      ),

    exec_lua_block: ($) =>
      seq(">{", alias($._lua_block_content, $.lua_code), "}"),

    // Body chunks: scanner-emitted SHELL_BLOCK_CONTENT segments interleaved
    // with `$<IDENT>` placeholders (§2.11). The scanner stops at each
    // valid placeholder boundary so the grammar can lex it as a token.
    shell_block: ($) =>
      seq(
        "{",
        repeat(
          choice(
            alias($._shell_block_content, $.shell_content),
            $.placeholder,
          ),
        ),
        "}",
      ),

    test_step: ($) =>
      seq(
        "test",
        field("body", choice($.shell_block, $.exec_lua_block)),
        $._newline,
      ),

    shell_command: ($) =>
      seq(
        repeat1(
          choice(
            alias($._shell_content, $.shell_content),
            $.placeholder,
          ),
        ),
        $._newline,
      ),

    // ── Primitives ─────────────────────────────────────────────

    _name: ($) => choice(alias($._bare_identifier, $.identifier), $.string),

    _decl_name: ($) =>
      choice(
        alias($._decl_bare, $.identifier),
        alias($._decl_string, $.string),
      ),
    _string_placeholder: ($) =>
      seq(
        token.immediate("$<"),
        alias(
          token.immediate(/[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*\[in\]|[A-Za-z_][A-Za-z0-9_.-]*:[A-Za-z_][A-Za-z0-9_.-]*(?:\.[A-Za-z_][A-Za-z0-9_]*)?(?:\[[0-9]+\])?|[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*/),
          $.placeholder_ident,
        ),
        token.immediate(">"),
      ),

    // String literals expose their inner placeholders. The fallback
    // `_string_chunk` keeps a bare `$` as text so a real placeholder
    // (which requires `$<`) is the only thing that consumes the `$<`
    // pair. NOTE: §2.11 strict-bail says a malformed `$<bad spaces>`
    // is literal text; with this structured rule the seq commits to
    // `$<` and errors at the missing `>`. The Rust parser remains the
    // source of truth for that edge case.
    // CS-0061: STRING admits both double- and single-quoted forms.
    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($._string_placeholder, $.placeholder),
              $._dq_string_chunk,
            ),
          ),
          token.immediate('"'),
        ),
        seq(
          "'",
          repeat(
            choice(
              alias($._sq_string_placeholder, $.placeholder),
              $._sq_string_chunk,
            ),
          ),
          token.immediate("'"),
        ),
      ),

    _dq_string_chunk: ($) =>
      choice(
        token.immediate(/[^"$]+/),
        token.immediate("$"),
      ),

    _sq_string_chunk: ($) =>
      choice(
        token.immediate(/[^'$]+/),
        token.immediate("$"),
      ),

    _sq_string_placeholder: ($) =>
      seq(
        token.immediate("$<"),
        alias(
          token.immediate(/[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*\[in\]|[A-Za-z_][A-Za-z0-9_.-]*:[A-Za-z_][A-Za-z0-9_.-]*(?:\.[A-Za-z_][A-Za-z0-9_]*)?(?:\[[0-9]+\])?|[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*/),
          $.placeholder_ident,
        ),
        token.immediate(">"),
      ),
