tree-sitter-cook/test/corpus/probes.txt
================
Bare shell producer
================

probe p
    { echo hi }

---

(source_file
  (probe
    (probe_header
      name: (identifier))
    (producer
      body: (shell_block
        (shell_content)))))

================
JSON and lines shell producers
================

probe json-cards
    json { cat cards.json }

probe tag-list
    lines { git tag }

---

(source_file
  (probe
    (probe_header
      name: (identifier))
    (producer
      body: (shell_block
        (shell_content))))
  (probe
    (probe_header
      name: (identifier))
    (producer
      body: (shell_block
        (shell_content)))))

================
Top-level tools declaration and envs probe producer
================

tools toolchain
    cc ld

probe build-env
    envs { CC CFLAGS }

---

(source_file
  (tools_declaration
    name: (identifier)
    (tool_set_line
      (identifier)
      (identifier)))
  (probe
    (probe_header
      name: (identifier))
    (producer
      (env_name_list
        (identifier)
        (identifier)))))

================
Lua producer
================

probe p
    >{ return {} }

---

(source_file
  (probe
    (probe_header
      name: (identifier))
    (producer
      body: (exec_lua_block
        (lua_code)))))

================
Probe keys and dependency references
================

probe cc-version
    { cc --version }

probe tool-chain: demo:cc-path multi:seg:dep "quoted:key"
    >{ return 1 }

probe demo:cc-version
    { cc --version }

probe "quoted:key"
    { echo quoted }

---

(source_file
  (probe
    (probe_header
      name: (identifier))
    (producer
      body: (shell_block
        (shell_content))))
  (probe
    (probe_header
      name: (identifier)
      (probe_dep_list
        (identifier)
        (identifier)
        (string)))
    (producer
      body: (exec_lua_block
        (lua_code))))
  (probe
    (probe_header
      name: (identifier))
    (producer
      body: (shell_block
        (shell_content))))
  (probe
    (probe_header
      name: (string))
    (producer
      body: (shell_block
        (shell_content)))))

================
Invalid producer name lists
================

tools empty

---

(source_file
  (ERROR
    (identifier)))

================
Hyphenated tool names (CS-0181)
================

tools generate:tool
    tree-sitter pkg-config

---

(source_file
  (tools_declaration
    name: (identifier)
    (tool_set_line
      (identifier)
      (identifier))))

================
A tool name may not start with a dash (CS-0181)
================

tools flagname
    --version

---

(source_file
  (ERROR
    (identifier)
    (lua_code)))

================
envs is not widened to hyphens (CS-0181)
================

probe envdash
    envs { CC-FLAGS }

---

(source_file
  (ERROR
    (probe_header
      name: (identifier))
    (identifier)
    (lua_code)))

================
Probe declaration accepts a multi-segment key (CS-0201)
================

probe one:two:three
    { echo ok }

---

(source_file
  (probe
    (probe_header
      name: (identifier))
    (producer
      body: (shell_block
        (shell_content)))))

================
Probe declaration rejects a dotted bare key (CS-0201)
================

probe cc.version
    envs { PATH }

---

(source_file
  (ERROR
    (probe_header
      (identifier))
    (lua_code)))

================
Probe with ingredients and producer
================

probe cards
    ingredients "data/*.json" !"data/old.json"
    json { cat data/*.json }

---

(source_file
  (probe
    (probe_header
      (identifier))
    (ingredients_step
      (string)
      (ingredient_exclude
        (string)))
    (producer
      (shell_block
        (shell_content)))))

================
Removed produce introducer is rejected
================

probe old
    produce { echo old }

---

(source_file
  (ERROR
    (probe_header
      (identifier))
    (import_name)
    (lua_code)))

================
Removed produce as json is rejected
================

probe old-json
    produce as json { echo old }

---

(source_file
  (ERROR
    (probe_header
      (identifier))
    (import_name)
    (lua_code)))

================
Removed produce as lines is rejected
================

probe old-lines
    produce as lines { echo old }

---

(source_file
  (ERROR
    (probe_header
      (identifier))
    (import_name)
    (lua_code)))

================
Probe missing producer is rejected
================

probe empty

---

(source_file
  (ERROR
    (probe_header
      (identifier))))

================
Probe duplicate producers are rejected
================

probe duplicate
    { echo one }
    lines { echo two }

---

(source_file
  (probe
    (probe_header
      (identifier))
    (producer
      (shell_block
        (shell_content))))
  (ERROR
    (import_name)
    (lua_code)))

================
Probe duplicate ingredients are rejected
================

probe duplicate-inputs
    ingredients "one"
    ingredients "two"
    { echo done }

---

(source_file
  (ERROR
    (probe_header
      (identifier))
    (ingredients_step
      (string))
    (import_name)
    (lua_code)))

================
Probe ingredients after producer are rejected
================

probe late-inputs
    { echo done }
    ingredients "late"

---

(source_file
  (probe
    (probe_header
      (identifier))
    (producer
      (shell_block
        (shell_content))))
  (ERROR
    (import_name)
    (lua_code)))

================
Probe body rejects non-producer item
================

probe bad-body
    cook "out" { echo no }

---

(source_file
  (ERROR
    (probe_header
      (identifier))
    (import_name)
    (lua_code)))

================
JSON wrong-body rejection
================

probe bad-json
    json >{ return {} }

---

(source_file
  (ERROR
    (probe_header
      (identifier))
    (lua_code)))

================
Tools wrong-body rejection
================

probe bad-tools
    tools >{ return {} }

---

(source_file
  (ERROR
    (probe_header
      (identifier))
    (import_name)
    (lua_code)))

================
Producer keywords are contextual outside probes
================

chore keyword-lines
    json { echo json }
    lines { echo lines }
    tools { echo tools }
    envs { echo envs }

---

(source_file
  (chore
    (chore_header
      (identifier))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))
    (shell_command
      (shell_content))))

================
Top-level files declaration with multi-line includes and an exclude (CS-0222)
================

files srcs
    "src/*.ts" "config/*.json"
    !"src/gen/*.ts"

---

(source_file
  (files_declaration
    name: (identifier)
    (file_set_line
      (glob_pattern
        (string))
      (glob_pattern
        (string)))
    (file_set_line
      (glob_pattern
        (string)))))

================
Files producer combined with ingredients is rejected (CS-0148)
================

probe srcs
    ingredients "other/*.c"
    files { "src/*.ts" }

---

(source_file
  (ERROR
    (probe_header
      name: (identifier))
    (ingredients_step
      (string))
    (import_name)
    (lua_code)))

================
Empty files glob-list is rejected
================

files empty-files

---

(source_file
  (ERROR
    (identifier)))

================
Unquoted entry in a files glob-list is rejected (CS-0148)
================

files srcs
    src/*.ts

---

(source_file
  (ERROR
    (identifier)
    (import_name)
    (lua_code)))

================
Lua block supplied where a files glob-list is required is rejected (CS-0148)
================

probe srcs
    files >{ return {} }

---

(source_file
  (ERROR
    (probe_header
      name: (identifier))
    (import_name)
    (lua_code)))
